platform/controllers/cloudnative-pg/1.29.1/operator/cnpg-operator.yaml
# Source: cloudnative-pg/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cnpg-webhook-service
  namespace: cnpg-system
  labels:
    helm.sh/chart: cloudnative-pg-0.28.3
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/instance: cnpg
    app.kubernetes.io/version: "1.29.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: webhook-server
    name: webhook-server
  selector:
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/instance: cnpg
---
# Source: cloudnative-pg/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnpg-cloudnative-pg
  namespace: cnpg-system
  labels:
    helm.sh/chart: cloudnative-pg-0.28.3
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/instance: cnpg
    app.kubernetes.io/version: "1.29.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
      app.kubernetes.io/instance: cnpg
  template:
    metadata:
      annotations:
        checksum/rbac: f6da5b14723070eedbea826f80887f736d1f7a46beeee04230937e0205520d79
        checksum/config: 75429caf3b4201deca75f56275f5efc5e74de840c3aba915683402b3f1e281ee
        checksum/monitoring-config: 43768a10e741e11e644f3336c99ce6aff101b009078df133091770352f93f504
      labels:
        app.kubernetes.io/name: cloudnative-pg
        app.kubernetes.io/instance: cnpg
    spec:
      containers:
      - args:
        - controller
        - --leader-elect
        - --max-concurrent-reconciles=10
        - --config-map-name=cnpg-controller-manager-config
        - --webhook-port=9443
        command:
        - /manager
        image: "ghcr.io/cloudnative-pg/cloudnative-pg:1.29.1"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /readyz
            port: webhook-server
            scheme: HTTPS
          initialDelaySeconds: 3
        name: manager
        ports:
        - containerPort: 8080
          name: metrics
          protocol: TCP
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: webhook-server
            scheme: HTTPS
          initialDelaySeconds: 3
        resources:
          {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 10001
          runAsUser: 10001
          seccompProfile:
            type: RuntimeDefault
        startupProbe:
          failureThreshold: 6
          httpGet:
            path: /readyz
            port: webhook-server
            scheme: HTTPS
          periodSeconds: 5
        volumeMounts:
        - mountPath: /controller
          name: scratch-data
        - mountPath: /run/secrets/cnpg.io/webhook
          name: webhook-certificates
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: cnpg-cloudnative-pg
      terminationGracePeriodSeconds: 10
      volumes:
      - emptyDir: {}
        name: scratch-data
      - name: webhook-certificates
        secret:
          defaultMode: 420
          optional: true
          secretName: cnpg-webhook-cert
---
# Source: cloudnative-pg/templates/mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: cnpg-mutating-webhook-configuration
  labels:
    helm.sh/chart: cloudnative-pg-0.28.3
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/instance: cnpg
    app.kubernetes.io/version: "1.29.1"
    app.kubernetes.io/managed-by: Helm
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cnpg-webhook-service
      namespace: cnpg-system
      path: /mutate-postgresql-cnpg-io-v1-backup
      port: 443
  failurePolicy: Fail
  name: mbackup.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - backups
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cnpg-webhook-service
      namespace: cnpg-system
      path: /mutate-postgresql-cnpg-io-v1-cluster
      port: 443
  failurePolicy: Fail
  name: mcluster.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cnpg-webhook-service
      namespace: cnpg-system
      path: /mutate-postgresql-cnpg-io-v1-database
      port: 443
  failurePolicy: Fail
  name: mdatabase.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - databases
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cnpg-webhook-service
      namespace: cnpg-system
      path: /mutate-postgresql-cnpg-io-v1-scheduledbackup
      port: 443
  failurePolicy: Fail
  name: mscheduledbackup.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - scheduledbackups
  sideEffects: None
---
# Source: cloudnative-pg/templates/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: cnpg-validating-webhook-configuration
  labels:
    helm.sh/chart: cloudnative-pg-0.28.3
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/instance: cnpg
    app.kubernetes.io/version: "1.29.1"
    app.kubernetes.io/managed-by: Helm
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cnpg-webhook-service
      namespace: cnpg-system
      path: /validate-postgresql-cnpg-io-v1-backup
      port: 443
  failurePolicy: Fail
  name: vbackup.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - backups
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cnpg-webhook-service
      namespace: cnpg-system
      path: /validate-postgresql-cnpg-io-v1-cluster
      port: 443
  failurePolicy: Fail
  name: vcluster.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cnpg-webhook-service
      namespace: cnpg-system
      path: /validate-postgresql-cnpg-io-v1-scheduledbackup
      port: 443
  failurePolicy: Fail
  name: vscheduledbackup.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - scheduledbackups
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cnpg-webhook-service
      namespace: cnpg-system
      path: /validate-postgresql-cnpg-io-v1-database
      port: 443
  failurePolicy: Fail
  name: vdatabase.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - databases
  sideEffects: None
- admissionReviewVersions:
    - v1
  clientConfig:
    service:
      name: cnpg-webhook-service
      namespace: cnpg-system
      path: /validate-postgresql-cnpg-io-v1-pooler
      port: 443
  failurePolicy: Fail
  name: vpooler.cnpg.io
  rules:
    - apiGroups:
        - postgresql.cnpg.io
      apiVersions:
        - v1
      operations:
        - CREATE
        - UPDATE
      resources:
        - poolers
  sideEffects: None
